<resources>
    <string name="app_name">Mechanize</string>
    <string name="home_label">Home</string>
    <string name="login_label">Login</string>
    <string name="login">Entrar</string>
    <string name="back">Voltar</string>
    <string name="logout">Sair</string>
    <string name="focus_to_me">Focar em mim</string>
    <string name="logo">Logo do Mechanize</string>
    <string name="logo_tech_warriors">Logo do Tech Warriors</string>
    <string name="developed_by_tech_warriors">Desenvolvido por</string>
    <string name="tech_warriors">Tech Warriors</string>
    <string name="create_account">Criar conta</string>
    <string name="welcome">Bem-vindo</string>
    <string name="welcome_description">Para continuar é necessário fazer login ou criar conta.</string>
    <string name="create_account_label">Criação de conta</string>
    <string name="login_description">Para entrar utilize seu e-mail e senha cadastrados. Se você errar os dados do login, será necessário esperar 10 segundos para tentar novamente.</string>
    <string name="email_label">E-mail</string>
    <string name="email_placeholder">Coloque o e-mail</string>
    <string name="password_label">Senha</string>
    <string name="password_placeholder">Coloque a senha</string>
    <string name="invalid_email">E-mail é obrigatório</string>
    <string name="invalid_password">Senha é obrigatória</string>
    <string name="invalid_login">E-mail ou senha estão inválidos</string>
    <string name="search_label">Procurar</string>
    <string name="create_account_description">Preencha os dados abaixo para criar uma conta. O e-mail deve ser válido e não cadastrado, também a senha deve ter no mínimo 8 caracteres, uma letra maiúscula, uma letra minúscula e um número.</string>
    <string name="password_confirmation_label">Repetir senha</string>
    <string name="password_confirmation_placeholder">Coloque a repetição da senha</string>
    <string name="name_label">Nome</string>
    <string name="name_placeholder">Coloque o nome</string>
    <string name="role_label">Tipo da conta</string>
    <string name="role_placeholder">Escolha o tipo da conta</string>
    <string name="driver">Motorista</string>
    <string name="mechanic">Mecânico</string>
    <string name="invalid_name">Nome é obrigatório</string>
    <string name="invalid_role">Tipo da conta é obrigatório</string>
    <string name="invalid_password_confirmation">Repetição da senha é obrigatória</string>
    <string name="invalid_passwords">As senhas devem ser iguais</string>
    <string name="invalid_create_account">Ocorreu um problema ao criar conta</string>
    <string name="accept_save_data">Aceito armazenar meus dados (leia a política de privacidade na home)</string>
    <string name="you_need_to_accept_save_data">É necessário aceitar armazenar seus dados</string>
    <string name="invalid_location">Localização não encontrada, deslogue para aceitar a permissão de localização ou tente abrir o aplicativo novamente</string>
    <string name="me">Eu</string>
    <string name="my_location">Minha localização</string>
    <string name="user">Usuário</string>
    <string name="service">serviço</string>
    <string name="close">Fechar</string>
    <string name="call_mechanic">Chamar mecânico</string>
    <string name="out_of_fuel">Acabou o combustível</string>
    <string name="vehicle_without_battery">Veículo sem bateria</string>
    <string name="glass_broke">Vidro quebrou</string>
    <string name="problem_label">Problema</string>
    <string name="problem_placeholder">Exemplo: pneu furou, motor fazendo barulho e outros</string>
    <string name="vehicle_label">Veículo</string>
    <string name="vehicle_placeholder">Exemplo: marca, modelo, cor, placa e outros</string>
    <string name="describe_service">Descrever serviço</string>
    <string name="cancel">Cancelar</string>
    <string name="conclude">Concluir</string>
    <string name="searching">Procurando</string>
    <string name="searching_description">Estamos fazendo o possível para encontrar um</string>
    <string name="invalid_create_ticket">Ocorreu um erro ao criar o serviço</string>
    <string name="created_ticket">Serviço criado, iremos procurar um mecânico agora</string>
    <string name="invalid_vehicle">Veículo é obrigatório</string>
    <string name="invalid_problem">Problema é obrigatório</string>
    <string name="time_to_retry_login_message">Espere %s segundos para tentar logar novamente</string>
    <string name="authenticating_user">Autenticando seu usuário</string>
    <string name="invalid_auth_user">Ocorreu um problema ao autenticar seu usuário</string>
    <string name="error_to_cancel_ticket">Ocorreu um erro ao cancelar, por favor, tente novamente</string>
    <string name="ticket_title">Encontramos alguns serviços para você escolher (%s/%s):</string>
    <string name="ticket_driver_name">Motorista: %s</string>
    <string name="ticket_vehicle">Veículo: %s</string>
    <string name="ticket_mechanic">Mecânico: %s</string>
    <string name="ticket_description">Descrição: %s</string>
    <string name="ticket_created_date">Criado em: %s</string>
    <string name="ticket_location">Localização: %s</string>
    <string name="attend_service">Atender esse serviço</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="google_maps_link">Link do Google Maps</string>
    <string name="error_to_accept_ticket">Ocorreu um problema ao iniciar o atendimento do serviço, tente novamente</string>
    <string name="success_to_accept_ticket">Atendimento iniciado, vá até o motorista e ajude-o</string>
    <string name="driver_location">Localização do motorista</string>
    <string name="concluding_title">Concluindo</string>
    <string name="concluding_text">Estamos marcando esse atendimento como resolvido, aguarde, por favor.</string>
    <string name="cancelling_title">Cancelando</string>
    <string name="cancelling_text">Estamos marcando esse atendimento como cancelado, aguarde, por favor.</string>
    <string name="concluded_ticket">Serviço concluído e marcado como resolvido</string>
    <string name="cancelled_ticket">Serviço marcado como cancelado</string>
    <string name="error_to_conclude_ticket">Ocorreu um erro ao concluir o serviço, tente novamente</string>
    <string name="service_was_cancelled">Serviço cancelado pelo outro usuário, voltamos sua visão</string>
    <string name="service_was_concluded">Serviço marcado como concluído (resolvido) pelo outro usuário, voltamos sua visão</string>
    <string name="notification_service_concluded_title">Serviço concluído</string>
    <string name="notification_service_concluded_message">O serviço foi concluído (resolvido).</string>
    <string name="notification_service_cancelled_title">Serviço cancelado</string>
    <string name="notification_service_cancelled_message">O serviço foi cancelado.</string>
    <string name="waiting_mechanic">%s (mecânico) está chegando para o atendimento</string>
    <string name="mechanic_was_found">Mecânico foi encontrado, iniciamos o atendimento, aguarde, por favor</string>
    <string name="rating_button">Enviar avaliação</string>
    <string name="rating_title">Avalie o serviço</string>
    <string name="rating_text">Seu serviço foi finalizado. Pedimos que avalie ele, por favor.</string>
    <string name="error_on_rating">Ocorreu um erro ao avaliar o serviço</string>
    <string name="success_on_rating">Obrigado por avaliar o serviço</string>
    <string name="notification_mechanic_found_title">Mecânico encontrado</string>
    <string name="notification_mechanic_found_message">Encontramos um mecânico para lhe atender, aguarde ele chegar até você.</string>
    <string name="notifications_channel_name">Canal de notificações do Mechanize</string>
    <string name="notifications_channel_description">Através das notificações podemos informar diversas ações que acontecem no aplicativo para você.</string>
    <string name="getting_current_ticket_text">Obtendo serviço atual</string>
    <string name="error_on_get_current_ticket">Erro ao obter serviço atual, você foi deslogado</string>
    <string name="back_to_search_mechanic">Voltamos a procurar um mecânico para lhe ajudar</string>
    <string name="back_search_because_mechanic_cancelled">O mecânico cancelou o atendimento, estamos procurando outro nesse momento</string>
    <string name="notification_mechanic_cancelled_title">Mecânico cancelou o atendimento</string>
    <string name="notification_mechanic_cancelled_message">Voltamos a procurar um mecânico, aguarde, por favor.</string>
    <string name="seeing_driver_location">Você está vendo a localização do motorista</string>
    <string name="privacy_policy">Política de privacidade</string>
    <string name="privacy_policy_text">A aplicação do Mechanize trata dados como nome, e-mail, senha (criptografada), localização e outras informações. Por isso, pedimos autorização para trabalhar com esses dados. Dentro do aplicativo, ou seja, localmente, salvamos alguns dados, como nome e tipo da conta, de forma totalmente criptografada. A plataforma segue os regulamentos ditados pela LGPD, tratando os dados pessoais apenas se o usuário consentir. Oferecemos a opção para os usuários editarem e eliminarem seus dados. Os dados serão persistidos até que a conta seja encerrada. Cumprimos também as exigências de segurança e privacidade da Google Play. Para usar o Mechanize, exigimos a permissão para visualizar a sua localização enquanto você usa o aplicativo, para assim você poder criar ou atender um serviço. Não nos responsabilizamos pelos pagamentos dos serviços, isso deve ser acordado entre ambas as partes (motoristas e mecânicos). Nosso objetivo é conectar indivíduos. Quando você criar ou atender um serviço, mantenha sempre o aplicativo aberto e seu usuário logado para funcionar corretamente recebendo novas informações dele.</string>
    <string name="updated_by">Feito por:</string>
    <string name="developer_name">João Paulo Hotequil</string>
    <string name="manual_pdf_text">Nosso manual:</string>
    <string name="manual_pdf_link">PDF (link)</string>
    <string name="star">Estrela</string>
    <string name="open_settings_screen">Abrir tela de configurações</string>
    <string name="settings_title">Configurações</string>
    <string name="change_password">Alterar senha</string>
    <string name="password_icon">Ícone de senha</string>
    <string name="delete_account">Excluir conta</string>
    <string name="we_are_working_in_this_feature">Nós estamos trabalhando nessa funcionalidade, aguarde, por favor</string>
    <string name="save_new_password">Salvar nova senha</string>
    <string name="current_password_label">Senha atual</string>
    <string name="current_password_placeholder">Coloque a senha atual</string>
    <string name="invalid_current_password">Senha atual é obrigatória</string>
    <string name="new_password_label">Nova senha</string>
    <string name="new_password_placeholder">Coloque a nova senha</string>
    <string name="invalid_new_password">Nova senha é obrigatória</string>
    <string name="new_password_confirmation_label">Repetir nova senha</string>
    <string name="new_password_confirmation_placeholder">Coloque a repetição da nova senha</string>
    <string name="invalid_new_password_confirmation">Repetição da nova senha é obrigatória</string>
    <string name="invalid_new_passwords">As novas senhas devem ser iguais</string>
    <string name="new_password_saved">A nova senha foi salva</string>
    <string name="error_change_password">Ocorreu um problema ao salvar a nova senha</string>
    <string name="change_password_rule">As senhas devem ter no mínimo 8 caracteres, uma letra maiúscula, uma letra minúscula e um número. Recomendamos não usar espaços.</string>
    <string name="current_password_invalid">Senha atual é inválida</string>
    <string name="new_password_invalid">Nova senha é inválida</string>
</resources>