<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".CreateAccountFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/header"
            android:layout_marginTop="@dimen/two_spaces"
            android:layout_marginStart="@dimen/space"
            android:stretchColumns="1">
            <TableRow tools:ignore="UselessParent">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:rippleColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:id="@+id/home_button"
                    android:contentDescription="@string/back"
                    app:icon="@drawable/baseline_arrow_back_48"
                    app:iconSize="@dimen/icon_button_size"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

                <TextView
                    android:text="@string/create_account_label"
                    android:textSize="@dimen/small_title_size"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/half_space"
                    android:layout_gravity="center|start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>

        <TextView app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:text="@string/create_account_description"
            android:id="@+id/description"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space"
            android:layout_marginStart="@dimen/space"
            android:layout_marginEnd="@dimen/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/two_spaces"
            android:background="@drawable/rounded_white_background"
            android:elevation="@dimen/elevation_space"
            android:paddingHorizontal="@dimen/space"
            android:paddingVertical="@dimen/two_spaces"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/name_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/role_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/role_label"
                android:labelFor="@id/role_autocomplete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_field"
                app:placeholderText="@string/role_placeholder">

                <AutoCompleteTextView
                    android:id="@+id/role_autocomplete"
                    android:layout_width="match_parent"
                    android:inputType="none"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/role_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/email_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/role_field"
                app:placeholderText="@string/email_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/password_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_field"
                app:placeholderText="@string/password_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirmation_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/password_confirmation_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field"
                app:placeholderText="@string/password_confirmation_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/accept_save_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:text="@string/accept_save_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_confirmation_field" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accept_save_data" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="@dimen/two_spaces"
                android:layout_height="@dimen/two_spaces"
                android:layout_marginTop="@dimen/space"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
