<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.mechanize.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_CreateAccountFragment"
            app:destination="@id/CreateAccountFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.mechanize.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_LoginFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateAccountFragment"
        android:name="com.mechanize.CreateAccountFragment"
        android:label="@string/create_account_label"
        tools:layout="@layout/fragment_create_account">

        <action
            android:id="@+id/action_CreateAccountFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.mechanize.SearchFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>
