<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/header"
        android:padding="@dimen/space"
        android:stretchColumns="1">
        <TableRow tools:ignore="UselessParent">
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/two_spaces"
                android:layout_height="@dimen/two_spaces"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:rippleColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:id="@+id/back_button"
                android:contentDescription="@string/back"
                app:icon="@drawable/baseline_arrow_back_48"
                app:iconTint="@color/black"
                app:iconSize="@dimen/two_spaces"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:text="@string/change_password"
                android:textSize="@dimen/small_title_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/half_space"
                android:layout_gravity="center|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"/>
        </TableRow>
    </TableLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/change_password_rule"
        android:id="@+id/rule"
        android:paddingHorizontal="@dimen/space"
        android:paddingBottom="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space"
        android:paddingBottom="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/rule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password_label"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/current_password_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:hint="@string/new_password_label"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_password_field"
            app:placeholderText="@string/new_password_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_confirmation_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:hint="@string/new_password_confirmation_label"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_field"
            app:placeholderText="@string/new_password_confirmation_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_confirmation_field"
            android:text="@string/save_new_password" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="@dimen/two_spaces"
            android:layout_height="@dimen/two_spaces"
            android:indeterminate="true"
            android:visibility="invisible"
            android:indeterminateTint="@color/primary"
            android:layout_marginTop="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
