<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/two_spaces"
    android:clickable="true"
    android:focusable="true"
    android:elevation="@dimen/elevation_space"
    android:background="@color/black_opaque">
        <ProgressBar
            android:id="@+id/searching_loading"
            android:layout_width="@dimen/ten_spaces"
            android:layout_height="@dimen/ten_spaces"
            android:indeterminate="true"
            android:visibility="visible"
            android:indeterminateTint="@color/primary"
            android:layout_marginTop="-172dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searching_loading"
            android:text="@string/searching"
            android:id="@+id/searching_label"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searching_label"
            android:text="@string/searching_description"
            android:id="@+id/searching_description_label"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/searching_description_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
